Fix automation icons, that are wrapped in <div> (like if/else)
[MAILPOET-6132]

--- a/mailpoet/assets/css/src/components-automation-editor/_step.scss
+++ b/mailpoet/assets/css/src/components-automation-editor/_step.scss
@@ -83,4 +83,11 @@
   justify-content: center;
   padding: 8px;
   position: relative;
+
+  > div {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    width: 100%;
+  }
 }
